--- a/omoss.style.css
+++ b/omoss.style.css
@@ -5,369 +5,529 @@ Orange: #DB7851
 Röd: #AF232C
 Brun: #672727
 */
+:root {
+  --vit: #f4f4f8;
+  --rosa: #fab0a6;
+  --orange: #db7851;
+  --röd: #af232c;
+  --brun: #672727;
+}
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #f4f4f8;
+  background-color: #f4f4f8;
+  font-family: Inter, Arial, sans-serif;
 }
-.all{
-background-color: #fab0a6;
-width: 1500px;
-margin-left: 200px;
-border-left: solid #f9c1b9 4px;
-border-right: solid #f9c1b9 4px;
+
+#logo {
+  max-width: 120px;
 }
-.about-us{
-color: #672727;
-margin-left: -100px;
+
+.main-header {
+  background-color: var(--vit);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-height: 123px;
+  padding: 2rem 3rem;
+  box-shadow: 0 6px 13px 7px #7627273e;
+  position: relative;
+  z-index: 1;
 }
-.owners{
-margin-left: -100px;
-color:#f4f4f8;
+
+/* Default for desktop */
+.desktop-menu {
+  font-size: 1.3rem;
+  align-content: center;
+  display: block;
+  position: relative;
 }
-.members{
-    color:#f4f4f8;
-    margin-left: 290px;
-    padding-bottom: 20px;
-    margin-top: -40px;
+
+.desktop-menu a {
+  color: var(--brun);
+  text-decoration: none;
+}
+
+.desktop-menu a:hover {
+  color: var(--röd);
+  text-decoration: underline;
+}
+
+.desktop-menu ul li {
+  display: inline;
+  margin-left: 3rem;
+}
+
+/* Hide hamburger by default */
+.hamburger {
+  display: none;
+}
+
+/* ------------------------- Hamburger menu (mobile) ----------------------------- */
+
+.hamburger ul {
+  margin: 0;
+  padding: 0;
+  margin-right: -2px;
+  list-style: none;
+  overflow: hidden;
+  background-color: var(--brun);
+  min-width: 30%;
+  position: absolute;
+  right: 2px;
+}
+
+.hamburger li a {
+  display: block;
+  padding: 20px 20px;
+  border-right: 2px solid var(--röd);
+  color: #fff;
+  text-decoration: none;
+}
+
+.hamburger li a:hover,
+.hamburger .menu-btn:hover {
+  background-color: var(--vit);
+  color: var(--brun);
+}
+
+/* Hamburger menu styles */
+.hamburger .menu {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease-out;
+}
+
+/* Hamburger menu icon */
+.hamburger .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+  margin-bottom: -5px;
+}
+
+.hamburger .menu-icon .navicon {
+  background: var(--brun);
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background 0.2s ease-out;
+  width: 18px;
+}
+
+.hamburger .menu-icon .navicon:before,
+.hamburger .menu-icon .navicon:after {
+  background: var(--brun);
+  content: "";
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all 0.2s ease-out;
+  width: 100%;
+}
+
+.hamburger .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.hamburger .menu-icon .navicon:after {
+  top: -5px;
+}
+
+.hamburger #menu-btn {
+  display: none;
+}
+
+.hamburger #menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon {
+  background-color: var(--brun);
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+  background: #fff;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+  background: #fff;
+}
+
+.hamburger #menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.hamburger #menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* Media query for mobile */
+@media (max-width: 1080px) {
+  .desktop-menu {
+    display: none;
+  }
+
+  .hamburger {
+    display: block;
+  }
+}
+
+/* ------------------------- End Hamburger menu ----------------------------- */
+
+.evenemang-button a {
+  color: var(--vit);
+  background: var(--orange);
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  border: 2px solid var(--brun);
+}
+
+.evenemang-button a:hover {
+  color: var(--vit);
+  background-color: var(--brun);
+  text-decoration: none;
+  border: 2px solid var(--röd);
+}
+
+.all {
+  background-color: #fab0a6;
+  width: 1500px;
+  margin-left: 200px;
+  border-left: solid #f9c1b9 4px;
+  border-right: solid #f9c1b9 4px;
+}
+.about-us {
+  color: #672727;
+  margin-left: -100px;
+}
+.owners {
+  margin-left: -100px;
+  color: #f4f4f8;
+}
+.members {
+  color: #f4f4f8;
+  margin-left: 290px;
+  padding-bottom: 20px;
+  margin-top: -40px;
 }
 
 .item-1 {
-    background-color: rgba(255, 255, 255, 0);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 500px;
-    margin-left: 650px;
-    text-align: center;
-    margin-top: 100px;
+  background-color: rgba(255, 255, 255, 0);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 500px;
+  margin-left: 650px;
+  text-align: center;
+  margin-top: 100px;
 }
 
 .item-1 a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-grow: 1;
-    margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  margin: 0;
 }
-.owners a{
 
-
-}
- /* Eivor */
-.card-1{
-    display: flex;
-    align-items: center;
-    background-color: #AF232C;
-    width: 500px;
-    height: 140px;
-    border: 1px solid #AF232C;
-    border-radius: 8px;
-    padding: 10px;
-   margin-left: 390px;
-   margin-top: 10px; 
-   
+/* Eivor */
+.card-1 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 500px;
+  height: 140px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-left: 390px;
+  margin-top: 10px;
 }
 
 .card-1 img {
-    width: 150px;
-    height: auto;
-    margin-right: 20px;
-    border-radius: 6px;
-    border-style: solid;
-    border-color: #921c24;
+  width: 150px;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #921c24;
 }
 
 .card-1-content {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .card-1-content h2 {
-    margin: 0 0 10px;
-    font-size: 1.5em;
-    color: #ffffffbc;
+  margin: 0 0 10px;
+  font-size: 1.5em;
+  color: #ffffffbc;
 }
 
 .card-1-content p {
-    margin: 0;
-    color: #ffffffbc;
+  margin: 0;
+  color: #ffffffbc;
 }
-
 
 /* Gunnar */
-.card-2{
-    display: flex;
-    align-items: center;
-    background-color: #AF232C;
-    width: 500px;
-    height: 140px;
-    border: 1px solid #AF232C;
-    border-radius: 8px;
-    padding: 10px;
-    margin-left: 920px;
-    margin-top: -139px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+.card-2 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 500px;
+  height: 140px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-left: 920px;
+  margin-top: -139px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .card-2 img {
-    width: 150px;
-    height: auto;
-    margin-right: 20px;
-    border-radius: 6px;
-    border-style: solid;
-    border-color: #921c24;
+  width: 150px;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #921c24;
 }
 .card-2-content {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 .card-2-content h2 {
-    margin: 0 0 10px;
-    font-size: 1.5em;
-    color: #ffffffbc;
+  margin: 0 0 10px;
+  font-size: 1.5em;
+  color: #ffffffbc;
 }
 .card-2-content p {
-    margin: 0;
-    color: #ffffffbc;
+  margin: 0;
+  color: #ffffffbc;
 }
-.card h2{
-font-size: large;
+.card h2 {
+  font-size: large;
 }
-.card p{
-font-size: small;
+.card p {
+  font-size: small;
 }
 
-.member-1{
-    display: flex;
-    align-items: center;
-    background-color: #AF232C;
-    width: 550px;
-    height: 240px;
-    border: 1px solid #AF232C;
-    border-radius: 8px;
-    padding: 10px;
-    
-    margin-top: 100px; 
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+.member-1 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 550px;
+  height: 240px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+
+  margin-top: 100px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .member-1 img {
-    width: 150px;
-    height: auto;
-    margin-right: 20px;
-    border-radius: 6px;
-    border-style: solid;
-    border-color: #921c24;
+  width: 150px;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #921c24;
 }
 
 .member-1-content {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .member-1-content h2 {
-    margin: 0 0 10px;
-    font-size: 1.5em;
-    color: #ffffffbc;
+  margin: 0 0 10px;
+  font-size: 1.5em;
+  color: #ffffffbc;
 }
 
 .member-1-content p {
-    margin: 0;
-    color: #ffffffbc;
+  margin: 0;
+  color: #ffffffbc;
 }
-.member-2{
-    display: flex;
-    align-items: center;
-    background-color: #AF232C;
-    width: 550px;
-    height: 240px;
-    border: 1px solid #AF232C;
-    border-radius: 8px;
-    padding: 10px;
-  
-   margin-top: 10px; 
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+.member-2 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 550px;
+  height: 240px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .member-2 img {
-    width: 150px;
-    height: auto;
-    margin-right: 20px;
-    border-radius: 6px;
-    border-style: solid;
-    border-color: #921c24;
+  width: 150px;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #921c24;
 }
 
 .member-2-content {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .member-2-content h2 {
-    margin: 0 0 10px;
-    font-size: 1.5em;
-    color: #ffffffbc;
+  margin: 0 0 10px;
+  font-size: 1.5em;
+  color: #ffffffbc;
 }
 
 .member-2-content p {
-    margin: 0;
-    color: #ffffffbc;
+  margin: 0;
+  color: #ffffffbc;
 }
-.member-3{
-    display: flex;
-    align-items: center;
-    background-color: #AF232C;
-    width: 550px;
-    height: 240px;
-    border: 1px solid #AF232C;
-    border-radius: 8px;
-    padding: 10px;
-    margin-top: 10px; 
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+.member-3 {
+  display: flex;
+  align-items: center;
+  background-color: #af232c;
+  width: 550px;
+  height: 240px;
+  border: 1px solid #af232c;
+  border-radius: 8px;
+  padding: 10px;
+  margin-top: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .member-3 img {
-    width: 150px;
-    height: auto;
-    margin-right: 20px;
-    border-radius: 6px;
-    border-style: solid;
-    border-color: #921c24;
+  width: 150px;
+  height: auto;
+  margin-right: 20px;
+  border-radius: 6px;
+  border-style: solid;
+  border-color: #921c24;
 }
 
 .member-3-content {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .member-3-content h2 {
-    margin: 0 0 10px;
-    font-size: 1.5em;
-    color: #ffffffbc;
+  margin: 0 0 10px;
+  font-size: 1.5em;
+  color: #ffffffbc;
 }
 
 .member-3-content p {
-    margin: 0;
-    color: #ffffffbc;
+  margin: 0;
+  color: #ffffffbc;
 }
 /*   footer  */
-footer{
-    display: flex;
-    justify-content: center;
-    background-color:#F4F4F8;
-    font-size: small;
-    width: 100%;
-    text-align: center;
-    padding:10px;
-    position: absolute;
-    bottom: 0px;
-    border-top: 2px solid rgb(228, 228, 228);
-    }
-    .contact{
-    padding-left: 15px;
-    padding-right: 15px;
-    }
-    .contact a:link{
-    color: black;
-    text-decoration: none;
-    
-    }
-    .links{
-    padding-left: 15px;
-    
-    }
-    .links a {
-    color: black;
-    text-decoration: none;
-    }
-    footer .links a:hover{
-    color:blue
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #f4f4f8;
+  font-size: small;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  position: absolute;
+  bottom: 0px;
+  border-top: 2px solid rgb(228, 228, 228);
+}
+.contact {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.contact a:link {
+  color: black;
+  text-decoration: none;
+}
+.links {
+  padding-left: 15px;
+}
+.links a {
+  color: black;
+  text-decoration: none;
+}
+footer .links a:hover {
+  color: blue;
+}
+footer .sociala-medier a:hover {
+  color: blue;
+}
+footer .contact a:hover {
+  color: blue;
+}
+ul {
+  list-style-type: none;
+}
+.sociala-medier {
+  padding-left: 15px;
+}
+.sociala-medier a {
+  color: black;
+}
 
-    }
-    footer .sociala-medier a:hover{
-    color:blue  
+@media only screen and (max-width: 545px) {
+  footer {
+    margin-left: -12px;
+    padding: 10px;
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+}
+footer {
+  display: flex;
+  justify-content: center;
+  background-color: #f4f4f8;
+  font-size: small;
+  height: 150px;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  position: relative;
+  bottom: 0px;
+  border-top: 2px solid rgb(228, 228, 228);
+}
+.contact {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.contact a:link {
+  color: black;
+  text-decoration: none;
+}
+.links {
+  padding-left: 15px;
+}
+.links a {
+  color: black;
+  text-decoration: none;
+}
+ul {
+  list-style-type: none;
+}
+.sociala-medier {
+  padding-left: 15px;
+}
+.sociala-medier a {
+  color: black;
+}
 
-    }
-    footer .contact a:hover{
-    color:blue
-
-    }
-    ul{
-    list-style-type: none;
-    
-    }
-    .sociala-medier{
-    padding-left: 15px;
-    
-    }
-    .sociala-medier a{
-    color: black;
-    
-    }
-    
-      @media only screen and (max-width: 545px) {
-        footer{
-            margin-left: -12px;
-        padding:10px;
-        font-size: 10px;
-        margin-bottom:20px;
-        
-          
-        }
-      }
-      footer{
-        display: flex;
-        justify-content: center;
-        background-color: #F4F4F8;
-        font-size: small;
-        height: 150px;
-        width: 100%;
-        text-align: center;
-        padding:10px;
-        position: relative;
-        bottom: 0px;
-        border-top: 2px solid rgb(228, 228, 228);
-        }
-        .contact{
-        padding-left: 15px;
-        padding-right: 15px;
-        }
-        .contact a:link{
-        color: black;
-        text-decoration: none;
-        
-        }
-        .links{
-        padding-left: 15px;
-        
-        }
-        .links a {
-        color: black;
-        text-decoration: none;
-        }
-        ul{
-        list-style-type: none;
-        
-        }
-        .sociala-medier{
-        padding-left: 15px;
-        
-        }
-        .sociala-medier a{
-        color: black;
-        
-        }
-        
-        @media only screen and (max-width: 545px) {
-            footer{
-                margin-left: -12px;
-            padding:10px;
-            font-size: 10px;
-            margin-bottom:20px;
-            
-              
-            }
-          }
-        /*header*/
-
- 
+@media only screen and (max-width: 545px) {
+  footer {
+    margin-left: -12px;
+    padding: 10px;
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+}
